fix: last line's squares being cut off

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     border: 5px solid #DED3C4;
     background-color: white;
     border-radius: 10px;
+    box-sizing: border-box;
 }
 
 .color-grid:hover {
@@ -69,6 +70,9 @@ body {
     align-self: center;
 }
 
+.square {
+    box-sizing: border-box;
+}
 
 .square:hover {
     border: 3px solid red !important;
